; ModuleID = '/home/carl/AnghaBench/vlc/modules/services_discovery/extr_microdns.c_stop_sd_cb.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/services_discovery/extr_microdns.c_stop_sd_cb.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { %struct.discovery_sys* }
%struct.discovery_sys = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*)* @stop_sd_cb to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @stop_sd_cb(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca %struct.TYPE_3__*, align 8
  %5 = alloca %struct.discovery_sys*, align 8
  store i8* %0, i8** %3, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = bitcast i8* %6 to %struct.TYPE_3__*
  store %struct.TYPE_3__* %7, %struct.TYPE_3__** %4, align 8
  %8 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %9 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %8, i32 0, i32 0
  %10 = load %struct.discovery_sys*, %struct.discovery_sys** %9, align 8
  store %struct.discovery_sys* %10, %struct.discovery_sys** %5, align 8
  %11 = load %struct.discovery_sys*, %struct.discovery_sys** %5, align 8
  %12 = getelementptr inbounds %struct.discovery_sys, %struct.discovery_sys* %11, i32 0, i32 0
  %13 = call i64 @atomic_load(i32* %12)
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %16

15:                                               ; preds = %1
  store i32 1, i32* %2, align 4
  br label %20

16:                                               ; preds = %1
  %17 = load %struct.discovery_sys*, %struct.discovery_sys** %5, align 8
  %18 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %19 = call i32 @items_timeout(%struct.discovery_sys* %17, %struct.TYPE_3__* %18, i32* null)
  store i32 0, i32* %2, align 4
  br label %20

20:                                               ; preds = %16, %15
  %21 = load i32, i32* %2, align 4
  ret i32 %21
}

declare dso_local i64 @atomic_load(i32*) #1

declare dso_local i32 @items_timeout(%struct.discovery_sys*, %struct.TYPE_3__*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
